--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/x-date-pickers": "^8.4.0",
+    "@types/marked": "^4.3.0",
     "@types/recharts": "^1.8.29",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.12.16",
+    "marked": "^15.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4"
+    "@types/react-dom": "^18.2.4",
+    "eslint-config-prettier": "^10.1.5"
   },
   "browserslist": {
     "production": [
