--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,12 +2,17 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
-scrape_configs:
-  - job_name: 'api_gateway'
-    static_configs:
-      - targets: ['api_gateway:8000']
-    metrics_path: '/metrics'
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          # - alertmanager:9093
 
+rule_files:
+  - "rules/ai_metrics.yml"
+  - "rules/system_metrics.yml"
+
+scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
@@ -15,6 +20,25 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
+
+  - job_name: 'api'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['api:8000']
+    metric_relabel_configs:
+      - source_labels: [__name__]
+        regex: 'ai_model_(.*)'
+        target_label: model_name
+        replacement: '${1}'
+
+  - job_name: 'frontend'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['frontend:80']
 
   - job_name: 'redis'
     static_configs:
