--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -13,4 +13,7 @@ PyJWT>=2.8.0
 psutil>=5.9.0
 email-validator>=2.1.0
 ollama>=0.1.6
-torch>=2.0.0 
+torch>=2.0.0
+numpy>=1.24.0
+sqlalchemy>=1.4.0
+alembic>=1.7.0 
