--- a/services/frontend/nginx.conf
+++ b/services/frontend/nginx.conf
@@ -1,52 +1,44 @@
 server {
     listen 80;
     server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
 
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Handle React routing
-    location / {
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-    }
-
-    # Proxy API requests to the API gateway
-    location /api/ {
-        proxy_pass http://api_gateway:8000/;
+    # Health check endpoint
+    location = /health {
+        proxy_pass http://api:8000/health;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy WebSocket connections
-    location /ws/ {
-        proxy_pass http://api_gateway:8000/ws/;
+    # API endpoints
+    location /api/ {
+        proxy_pass http://api:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # WebSocket endpoint
+    location /ws {
+        proxy_pass http://api:8000/ws;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Serve static files
-    location /static/ {
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     # Error pages
-    error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
