--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,13 +1,16 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-httpx>=0.23.0
-prometheus-client>=0.11.0
-python-dotenv==1.0.0
-pydantic==2.4.2
-pydantic-settings==2.0.3
+fastapi==0.104.1
+uvicorn==0.24.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart>=0.0.5
+python-multipart==0.0.6
+pydantic==2.5.2
+pydantic-settings==2.1.0
+python-dotenv==1.0.0
+bcrypt==4.0.1
+prometheus-client>=0.11.0
+httpx>=0.23.0
 redis>=4.0.0
 PyJWT>=2.8.0
 psutil>=5.9.0
@@ -15,5 +18,4 @@ email-validator>=2.1.0
 ollama>=0.1.6
 torch>=2.0.0
 numpy>=1.24.0
-sqlalchemy>=1.4.0
 alembic>=1.7.0 
