--- a/services/frontend/public/manifest.json
+++ b/services/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "OmniMind",
-  "name": "OmniMind Admin Dashboard",
+  "name": "OmniMind - AI-Powered Platform",
   "icons": [
     {
       "src": "favicon.ico",
