--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "80:80"
     environment:
-      - REACT_APP_API_URL=http://localhost/api
+      - REACT_APP_API_URL=http://localhost:8000
       - REACT_APP_WS_URL=ws://localhost/ws
     depends_on:
       - api_gateway
