--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^8.4.0",
     "@types/marked": "^4.3.0",
     "@types/recharts": "^1.8.29",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.12.16",
     "marked": "^15.0.12",
@@ -28,6 +29,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/node": "^22.15.29",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "eslint-config-prettier": "^10.1.5"
