--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,21 +1,25 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.10
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.2
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-bcrypt==4.0.1
-prometheus-client>=0.11.0
-httpx>=0.23.0
-redis>=4.0.0
-PyJWT>=2.8.0
-psutil>=5.9.0
-email-validator>=2.1.0
-ollama>=0.1.6
-torch>=2.0.0
-numpy>=1.24.0
-alembic>=1.7.0
+fastapi>=0.115.2
+uvicorn>=0.32.0
+sqlalchemy>=2.0.36
+psycopg2-binary>=2.9.10
+python-jose[cryptography]>=3.5.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.12
+pydantic>=2.9.2
+pydantic-settings>=2.5.2
+python-dotenv>=1.0.1
+bcrypt>=4.2.0
+prometheus-client>=0.21.0
+httpx>=0.27.2
+redis>=5.1.1
+PyJWT>=2.9.0
+psutil>=6.1.0
+email-validator>=2.2.0
+ollama>=0.3.3
+torch>=2.5.0
+numpy>=2.1.2
+alembic>=1.13.3
+transformers>=4.46.0
+bertopic>=0.16.3
+nltk>=3.9.1
+tensorflow>=2.18.0
