--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -7,17 +7,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.15.0",
     "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.8.2",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/marked": "^5.0.2",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
     "highlight.js": "^11.9.0",
@@ -27,8 +20,8 @@
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^2.0.4",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
-    "react-toastify": "^10.0.4",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.0",
     "typescript": "^5.3.3",
     "web-vitals": "^3.5.2",
@@ -66,6 +59,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/marked": "^5.0.2",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-dropzone": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -77,6 +75,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2"
   }
 }
