--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   frontend:
     build:
@@ -8,9 +6,9 @@ services:
     ports:
       - "80:80"
     environment:
-      - NODE_ENV=development
-      - REACT_APP_API_URL=http://api:8000
-      - REACT_APP_METRICS_URL=http://prometheus:9090
+      - NODE_ENV=production
+      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_METRICS_URL=http://localhost:9090
     volumes:
       - ./services/frontend:/app
       - /app/node_modules
@@ -22,7 +20,7 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
 
   api:
     build:
@@ -31,20 +29,43 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - PYTHONUNBUFFERED=1
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/omnimind
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=omnimind
       - REDIS_URL=redis://:redis@redis:6379/0
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       - REDIS_PASSWORD=redis
+      - CORS_ORIGINS=http://localhost:80,http://frontend:80,http://localhost:3000
+      - SECRET_KEY=your-secret-key-a
+      - ALGORITHM=HS256
       - PROMETHEUS_MULTIPROC_DIR=/tmp
+      - ML_SERVICE_URL=http://ollama:11434
+      - OLLAMA_HOST=http://ollama:11434
+      - LOG_LEVEL=DEBUG
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_PORT=587
+      - SMTP_USER=${SMTP_USER:-noreply@omnimind.example.com}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:-your-app-password}
+      - EMAIL_FROM=noreply@omnimind.example.com
+      - CELERY_BROKER_URL=redis://:redis@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:redis@redis:6379/0
     volumes:
       - ./services/api:/app
-      - /tmp
+      - /tmp:/tmp
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
+      ollama:
+        condition: service_healthy
+    command: sh -c "sleep 10 && uvicorn main:app --host 0.0.0.0 --port 8000"
     networks:
       - app_network
       - monitoring_network
@@ -52,13 +73,13 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
 
   db:
-    image: postgres:14
+    image: postgres:15
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=omnimind
     ports:
       - "5433:5432"
@@ -68,7 +89,7 @@ services:
       - app_network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -83,7 +104,7 @@ services:
       - app_network
     healthcheck:
       test: ["CMD", "redis-cli", "-a", "redis", "ping"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -91,14 +112,18 @@ services:
     image: ollama/ollama:latest
     ports:
       - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
     networks:
       - app_network
-    # Add volume if models need to persist
-    # volumes:
-    #   - ollama_data:/root/.ollama
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:latest
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
@@ -113,15 +138,15 @@ services:
       - monitoring_network
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
       - grafana_data:/var/lib/grafana
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_USERS_ENABLED=false
     ports:
-      - "3001:3000"
+      - "3000:3000"
     depends_on:
       - prometheus
     networks:
@@ -136,7 +161,7 @@ services:
     command:
       - '--path.procfs=/host/proc'
       - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($|/)'
     ports:
       - "9100:9100"
     networks:
@@ -148,23 +173,23 @@ services:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
       - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-      - /dev/disk/:/dev/disk:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /dev/disk:/dev/disk:ro
     ports:
       - "8080:8080"
     networks:
       - monitoring_network
 
   loki:
-    image: grafana/loki:3.0.0
+    image: grafana/loki:3.2.0
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
     volumes:
       - ./loki:/etc/loki
-      - loki_data:/loki
-      - ./loki/wal:/loki/wal
-      - loki_compactor:/loki/compactor
+      - loki_data:/data/loki
+      - ./loki/wal:/data/loki/wal
+      - loki_compactor_data:/data/loki/compactor
     environment:
       - LOKI_AUTH_ENABLED=false
     networks:
@@ -186,11 +211,12 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  ollama_data:
   prometheus_data:
   grafana_data:
   loki_data:
   loki_wal:
-  loki_compactor:
+  loki_compactor_data:
 
 networks:
   app_network:
