--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - PYTHONUNBUFFERED=1
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - SECRET_KEY=${SECRET_KEY}
+      - SECRET_KEY=${SECRET_KEY:?SECRET_KEY is required}
       - ALGORITHM=${ALGORITHM:-HS256}
       - REDIS_URL=${REDIS_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - DATABASE_URL=${DATABASE_URL:-postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}}
@@ -40,9 +40,9 @@ services:
       - SMTP_HOST=${SMTP_HOST:-smtp.gmail.com}
       - SMTP_PORT=${SMTP_PORT:-587}
       - SMTP_USER=${SMTP_USER:-noreply@omnimind.example.com}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:?SMTP_PASSWORD is required}
       - EMAIL_FROM=${EMAIL_FROM:-noreply@omnimind.example.com}
-      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:80,http://frontend:80,https://app.apiplatform.ai}
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://frontend:80,https://app.apiplatform.ai}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - PROMETHEUS_MULTIPROC_DIR=/tmp/prometheus
@@ -65,7 +65,7 @@ services:
     image: postgres:16
     environment:
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
       - POSTGRES_DB=${POSTGRES_DB:-omnimind}
     volumes:
       - pgdata:/var/lib/postgresql/data
@@ -77,7 +77,7 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "5432:5432"  # Expose for local testing, remove in production if not needed
+      - "5432:5432"  # Remove in production
 
   redis:
     image: redis:7
@@ -90,7 +90,7 @@ services:
       timeout: 10s
       retries: 5
     ports:
-      - "6379:6379"  # Expose for local testing, remove in production if not needed
+      - "6379:6379"  # Remove in production
 
   ollama:
     image: ollama/ollama:latest
